--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   </nav>
 
   <h1>Lorem .</h1>
+  
   <div class="scrolldown"><a href="#About"><span></span></a></div>
 
 </header>
@@ -69,7 +70,7 @@
 
 
 
-<section class="testimonials-section" id="Carousel">
+<section class="carousel-section" id="Carousel">
 
   <h2 class="text-center">JS Carousel !</h2>
 
